--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -485,4 +485,7 @@
     <!-- Does device supports fast charging ? -->
     <bool name="config_FastChargingLedSupported">true</bool>
 
+    <!-- Whether the device supports Smart Pixels --> 
+    <bool name="config_enableSmartPixels">true</bool>
+
 </resources>
